# multigate

./: .env  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: HelloWorld.vue
server/src/multigate/: __init__.py
server/src/multigate/templates/: index.html.j2
