[project]
dependencies = [
  "litestar>=2.8.2",
  "litestar-granian>=0.2.6",
  "granian[reload]>=1.3.0",
]
description = "Add your description here"
name = "multigate"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "ruff>=0.4.2",
]
managed = true

[tool.rye.scripts]
dev = "litestar --app server.src.multigate:app run --debug --reload"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multigate"]
