[project]
dependencies = [
    "litestar[standard]>=2.8.2",
    "litestar-granian>=0.2.6",
    "granian[reload]>=1.3.0",
    "litestar-vite>=0.1.22",
]
description = "Add your description here"
name = "multigate"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "ruff>=0.4.2",
  "djlint>=1.34.1",
  "isort>=5.13.2",
]
managed = true
virtual = true

[tool.rye.scripts]
dev = "litestar --app server.src.multigate:app run -drp 8300"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multigate"]

[tool.djlint]
ignore = "H030,H031"

[tool.isort]
profile = "black"
